@@ -12,6 +12,11 @@ class Object
   def blank?
     respond_to?(:empty?) ? empty? : !self
   end
+    
+  # An object is present if it's not blank.
+  def present?
+    !blank?
+  end
 end
 
 class NilClass #:nodoc:
