@@ -16,4 +16,9 @@ class BlankTest < Test::Unit::TestCase
     BLANK.each { |v| assert v.blank?, "#{v.inspect} should be blank" }
     NOT.each   { |v| assert !v.blank?, "#{v.inspect} should not be blank" }
   end
+
+  def test_present
+    BLANK.each { |v| assert !v.present?, "#{v.inspect} should not be present" }
+    NOT.each   { |v| assert v.present?, "#{v.inspect} should be present" }
+  end
 end
