@@ -1,5 +1,7 @@
 *Edge*
 
+* Added Object#present? which is equivalent to !Object#blank? [DHH]
+
 * Added Enumberable#several? to encapsulate collection.size > 1 [DHH]
 
 * Add more standard Hash methods to ActiveSupport::OrderedHash [Steve Purcell]
